New structure.
