# openapi.yaml
@@ -11,7 +11,7 @@ servers:
 tags:
   - name: shorten
 paths:
-  /shorten:
+  /{slug}:
     post:
       summary: Create a shortened URL
       operationId: createShortenedURL
@@ -24,13 +24,23 @@ paths:
             schema:
               $ref: '#/components/schemas/ShortenRequest'
       responses:
-        '200':
+        200:
           description: Success
           content:
             application/json; charset=utf-8:
               schema:
                 $ref: '#/components/schemas/ShortenResponse'
-        '409':
+        400:
+          description: Bad request format
+          content:
+            application/json; charset=utf-8:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                example: { 'message': 'Please send a valid URL' }
+        409:
           description: Slug already taken
           content:
             application/json; charset=utf-8:
@@ -40,7 +50,6 @@ paths:
                   message:
                     type: string
                 example: { 'message': 'hello-world is already taken.' }
-  /{slug}:
     get:
       summary: Resolve a slug
       operationId: resolveSlug
